--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon --watch \"server/*.ts\" --exec \"ts-node\" server/app.tsx"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +50,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "type": "module"
 }
