--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
@@ -25,7 +26,6 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
