--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
