--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.5",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
