--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/cors": "^2.8.12",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.41",
@@ -17,6 +18,7 @@
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
