--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -21,6 +22,7 @@
     "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
