--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "env": "^0.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
