--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "env": "^0.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
