--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,8 @@
 {
   "compilerOptions": {
     // "typeRoots": ["./node_modules/@types","./src/customType"],
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "target": "es6",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,10 +17,8 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "ts-node": {
     "esm": true
-}
+  }
 }
