--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cheerio": "^0.22.31",
     "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.5.2",
@@ -18,6 +19,7 @@
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "env": "^0.0.2",
