--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.5.2",
+    "@types/jquery": "^3.5.14",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mysql": "^2.15.21",
     "@types/node": "^16.11.41",
@@ -24,6 +25,8 @@
     "crypto-js": "^4.1.1",
     "env": "^0.0.2",
     "express": "^4.18.1",
+    "jquery": "^3.6.0",
+    "jquery-ui": "^1.13.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
