--- a/package.json
+++ b/package.json
@@ -69,5 +69,8 @@
       "last 1 safari version"
     ]
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^8.22.0"
+  }
 }
