--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-redux": "^7.1.24",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.26",
+    "@types/animejs": "^3.1.5",
+    "animejs": "^3.2.1",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
@@ -71,6 +73,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/animejs": "^3.1.5",
     "eslint": "^8.22.0"
   }
 }
