--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/animejs": "^3.1.5",
     "@types/cheerio": "^0.22.31",
     "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.1.1",
@@ -14,12 +15,12 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mysql": "^2.15.21",
     "@types/node": "^16.11.41",
+    "@types/nodemailer": "^6.4.5",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.26",
-    "@types/animejs": "^3.1.5",
     "animejs": "^3.2.1",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
