--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
   "type": "module",
   "devDependencies": {
     "@types/animejs": "^3.1.5",
-    "eslint": "^8.22.0",
-    "pm2": "^5.2.0"
+    "eslint": "^8.22.0"
   }
 }
