--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "nodemon --watch \"server/*.ts\" --exec \"ts-node\" server/app.tsx"
+    "dev": "nodemon --watch \"server/*.ts\" --exec \"ts-node\" server/app.ts"
   },
   "eslintConfig": {
     "extends": [
