--- a/.github/workflows/master_push.yml
+++ b/.github/workflows/master_push.yml
@@ -18,11 +18,11 @@ jobs:
         script: |
           sudo su
           cd NoteGame
-          sudo git pull
+          git pull
           npm i
           npm run build
-          pm2 kill
-          pm2 install typescript
+          npx pm2 kill
+          npx pm2 install typescript
           npx pm2 start server/app.ts
           
         
