--- a/.github/workflows/master_push.yml
+++ b/.github/workflows/master_push.yml
@@ -18,9 +18,9 @@ jobs:
         script: |
           sudo su
           cd NoteGame
-          git pull
-          npm i
-          npm run build
+          sudo git pull
+          sudo npm i
+          sudo npm run build
           npx pm2 kill
           npx pm2 install typescript
           npx pm2 start server/app.ts
