--- a/.github/workflows/master_push.yml
+++ b/.github/workflows/master_push.yml
@@ -19,11 +19,8 @@ jobs:
           sudo su
           cd NoteGame
           sudo git pull
-          sudo npm i
-          sudo npm run build
-          npx pm2 kill
-          npx pm2 install typescript
-          npx pm2 start server/app.ts
+          npm i
+          npm run build
           
         
           
