--- a/.github/workflows/master_push.yml
+++ b/.github/workflows/master_push.yml
@@ -18,6 +18,7 @@ jobs:
         script: |
           echo 'start'
           sudo su
+          chmod 711 /home/ec2-user
           cd NoteGame
           pwd
           sudo git pull
