--- a/.github/workflows/master_push.yml
+++ b/.github/workflows/master_push.yml
@@ -19,6 +19,7 @@ jobs:
           echo 'start'
           sudo su
           cd NoteGame
+          node-v
           sudo npm run build
           
         
