--- a/.github/workflows/master_push.yml
+++ b/.github/workflows/master_push.yml
@@ -17,9 +17,11 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           echo 'start'
+          . ~/.nvm/nvm.sh
           sudo su
           cd NoteGame
           node -v
+          node -e "console.log('Running Node.js ' + process.version)"
           sudo npm run build
           
         
