--- a/.github/workflows/master_push.yml
+++ b/.github/workflows/master_push.yml
@@ -49,6 +49,7 @@ jobs:
           sudo su
           cd NoteGame
           npx pm2 kill
+          npx pm2 install typescript
           npx pm2 start server/app.ts
           
  
