컴파일 옵션 복구 및 빌드 테스트

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "declaration": true //컴파일시 .d.ts 파일도 자동으로 함께생성 (현재쓰는 모든 타입이 정의된 파일)
+    "jsx": "react-jsx"
   },
   "include": ["src"],
   "ts-node": {
